--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fs": "0.0.2",
     "jquery": "^2.1.3",
     "jsdom": "^5.0.1",
+    "node-schedule": "^0.2.6",
     "open": "0.0.5",
     "request": "^2.55.0",
     "stylus": "^0.50.0",
